@@ -1,5 +1,9 @@
 2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* center layers
+
+2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* warning for more than one initial goal
 
 2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>
